# phasors

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
phasors/: __init__.py  phasor.py
tests/: conftest.py  test_phasor.py
