[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "phasors"
authors = [{name = "Joe Stanley", email = "engineerjoe440@yahoo.com"}]
maintainers = [
    {name = "Joe Stanley", email = "engineerjoe440@yahoo.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["version", "description"]

dependencies = [
    "numpy",
]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project.urls]
Home = "https://github.com/engineerjoe440/phasors"
Repository = "https://github.com/engineerjoe440/phasors"
Issues = "https://github.com/engineerjoe440/phasors/issues"
Documentation = "https://phasors.readthedocs.io/en/latest/"
